# ceia-computer-vision-ii

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
2026/Clase_4/: yolo_1_detec_img.ipynb  yolo_2_detec_video.ipynb  yolo_4_detec_custom_real_time.ipynb
2026_copy/Clase_1/Notebooks/: CIFAR10_CNN.ipynb  MNIST_CNN.ipynb
2026_copy/Clase_3/Notebooks/: modelos_pre_entrenados.ipynb
2026_copy/Clase_4/: yolo_1_detec_img.ipynb  yolo_3_detec_custom.ipynb  yolo_4_detec_custom_real_time.ipynb
2026_copy/Clase_5/: 1_yolo_seg_ins_img.ipynb  2_seg_sem_img.ipynb
Clase_1/Notebooks/: CIFAR10_CNN.ipynb  MNIST_CNN.ipynb
Clase_3/Notebooks/: modelos_pre_entrenados.ipynb
Clase_4/Notebooks/deteccion_objetos/: video_detec.py  yolo_detec_img.ipynb
Clase_4/Notebooks/deteccion_puntos_corporales/: intro_mediapipe_pose.ipynb  mp_gesto_bicep.py  mp_manos.py
Clase_4/Notebooks/deteccion_rostros/: deteccion_rostros.ipynb  detector_rostros_rt.py
Clase_6/autoencoders/: autoencoders.ipynb
Clase_6/neural_style_transfer/: style_transfer.ipynb  transferencia_de_estilo.ipynb
Clase_7/GANs/: GANs Fashion MNIST.ipynb  GANs MNIST.ipynb  generador_rostros_fifa.ipynb
Clase_7/aplicaciones_GANs/: desktop.ini
Clase_8/: captions_models.ipynb  depth-any-img.py  depth-any-rt.py  depth-pro.py  zoedepth.py
TP_Final/: .gitignore  README.md  requirements.txt
clase_1/: Clase_1a_Data_Augmentation.ipynb
clase_2/: Clase_2a_ResNet_.ipynb  Clase_2b_Transfer_Learning_VGG19.ipynb  Clase_2c_Transfer_Learning_ResNet18.ipynb  Clase_2d_Ejercicio_Negative_Transfer.ipynb
(+6 files in other folders)
